WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44346
[CHROMIUM] Failing layout tests w/ACCELERATED_2D_CANVAS
https://bugs.webkit.org/show_bug.cgi?id=44346
Summary
[CHROMIUM] Failing layout tests w/ACCELERATED_2D_CANVAS
Stephen White
Reported
2010-08-20 12:12:52 PDT
LayoutTests/fast/canvas/canvas-incremental-repaint.html (top middle box: white rectangle is in the wrong place). LayoutTests/fast/canvas/canvas-strokeRect.html LayoutTests/fast/canvas/shadow-offset-[1-7].html
Attachments
Patch
(9.08 KB, patch)
2010-08-20 12:49 PDT
,
Stephen White
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2010-08-20 12:49:11 PDT
Created
attachment 64975
[details]
Patch
James Robinson
Comment 2
2010-08-23 14:06:54 PDT
Looks great to me! Ken, what say you?
Kenneth Russell
Comment 3
2010-08-23 15:11:16 PDT
Comment on
attachment 64975
[details]
Patch Looks good to me.
Stephen White
Comment 4
2010-08-23 15:24:08 PDT
Committed
r65836
: <
http://trac.webkit.org/changeset/65836
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug